<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yut</string>
    <string name="start">Start</string>
    <string name="avatar_shop">Avatar shop</string>
    <string name="how_to_play">How to play</string>
    <string name="options">Options</string>
    <string name="play_online">Play Online</string>
    <string name="one_player">1-Player</string>
    <string name="two_player">2-Player</string>
    <string name="swap">&lt;-&gt;</string>
    <string name="loading">Loading&#8230;</string>
    <string name="computer">Computer is making a move&#8230;</string>
    <string name="opponent">Opponent is making a move&#8230;</string>
    <string name="action_settings">Settings</string>
    <string name="player1_turn">Player 1\'s Turn</string>
    <string name="player2_turn">Player 2\'s Turn</string>
    <string name="your_turn">Your Turn</string>
    <string name="computer_turn">Computer\'s Turn</string>
    <string name="update">A newer version is available! Please update before playing online.</string>
    <string name="opponent_turn">Opponent\'s Turn</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="sticks">Stick animation</string>
    <string name="rollSlot">Slot displaying roll</string>
    <string name="topBar">Top Bar for Player 1</string>
    <string name="bottomBar">Bottom Bar for Player 2</string>
    <string name="seal">Seal</string>
    <string name="penguin">Penguin</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="seal_icon">Seal Icon</string>
    <string name="penguin_icon">Penguin Icon</string>
    <string name="finish">Finish Button</string>
    <string name="soon">Coming Soon!</string>
    <string name="back">Back</string>
    <string name="twenty">20 Coins</string>
    <string name="future">Check back in the future for new avatars!</string>
    <string name="set_avatar">Press an avatar below to open a drop menu or press the orange button to swap the current avatars</string>
    <string name="change">Change</string>
    <string name="buy">Buy</string>
    <string name="welcome">Welcome to the Avatar Shop!</string>
    <string name="spend">Spend your coins from playing Yut to buy new avatars!</string>
    <string name="click_me">Press me!</string>
    <string name="click_yellow">Press a yellow tile to move</string>
    <string name="click_finish">Press finish to complete current piece(s)</string>
    <string name="opponent_roll_again">Opponent Rolls Again!</string>
    <string name="you_roll_again">Roll Again!</string>
    <string name="player1_roll_again">Player 1 Roll Again!</string>
    <string name="player2_roll_again">Player 2 Roll Again!</string>
    <string name="computer_roll_again">Computer Rolls Again!</string>
    <string name="you_win">You win!</string>
    <string name="opponent_wins">Opponent wins!</string>
    <string name="player1_wins">Player 1 wins!</string>
    <string name="player2_wins">Player 2 wins!</string>
    <string name="computer_wins">Computer wins!</string>
    <string name="signin_failure">Unable to sign in</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="online_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="guide1"><u>OBJECTIVE</u>\n\nThe first player to move all 4 of his or her pieces around the board wins.\n\n<u>ROLL PHASE</u>\n\nDuring your turn, you will be prompted to throw the sticks with the roll button.\n</string>
    <string name="guide2">If you roll a 4 or 5, you get to roll again. In addition, if you land on an opponent\'s piece, you get to roll again.\n\n<u>MOVE PHASE</u>\n\nYour possible moves are shown in the 5 circles near the bottom.\n</string>
    <string name="guide3">To move, click any one of your available pieces (the jumping pieces) and select a yellow tile, which indicates a possible location you can move to with that piece. Stack your pieces together to move faster around the board!\n</string>
    <string name="guide4"><u>POSSIBLE ROLLS AND RATES</u>\n\n<b>-1</b>: 6.25%\n <b>1</b>: 18.75%\n <b>2</b>: 37.50%\n <b>3</b>: 25.00%\n <b>4</b>: 6.25%\n <b>5</b>: 6.25%\n\nNote: These rates are averages and you may get luckier or unluckier!\n</string>
    <string name="guide5"><u>REMAINING PIECES</u>\n\nPieces off the board that need to be completed will be shown at the top. Pieces already completed will have medals. Pieces on the board will not be shown at the top.\n</string>
    <string name="guide6"><u>COINS</u>\n\nEarn coins to buy new avatars!\n</string>
    <string name="guide7">- Earn 1 coin for playing a two player match\n- Earn 1 coin for losing against a computer\n- Earn 3 coins for winning against a computer</string>

    <string name="credits">
        <u>DEVELOPERS</u>\n\n
        Jeffrey Chan\n
        Richard Zhang\n
        Atsuko Shimizu\n
        Roland Zhou\n\n
        <u>TESTERS</u>\n\n
        Edward Kiewra
    </string>

    <string name="game_title">Button Clicker 2000!</string>
    <string name="sign_in_online">To play online, you must sign in with Google.</string>
    <string name="single_player">Single Player</string>
    <string name="single_player_explanation">Get some practice!</string>
    <string name="quick_game">Find Opponent</string>
    <string name="invite_players">Invite friends</string>
    <string name="see_invitations">See invitations</string>
    <string name="quick_game_explanation">Challenge a random opponent.</string>
    <string name="invite_players_explanation">Invite friends to play a game.</string>
    <string name="see_invitations_explanation">See who is inviting you right now.</string>
    <string name="return_explanation">Return to the title screen.</string>
    <string name="inv_popup_text">Incoming invitation!</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="instructions">Click the button as fast as you can!</string>
    <string name="game_problem">An error occurred while starting the game. Please try again.</string>
    <string name="is_inviting_you">is challenging you to a game!</string>
    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>

    <string name="status_multiplayer_error_not_trusted_tester">Anyone you invite must be a trusted tester</string>
    <string name="match_error_already_rematched">This rematch has already been started!</string>
    <string name="client_reconnect_required">Games client reconnect required</string>
    <string name="network_error_operation_failed">Network error: Operation failed</string>
    <string name="internal_error">Internal error</string>
    <string name="unexpected_status">Unexpected status</string>
    <string name="match_error_inactive_match">This match is inactive.</string>
    <string name='match_error_locally_modified'>This match has locally-modified data.  This operation cannot be performed until the match is sent to the server.</string>

</resources>
