<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (C) 2013 Google Inc.
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
      http://www.apache.org/licenses/LICENSE-2.0
   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:ads="http://schemas.android.com/apk/res-auto"
             android:id="@+id/rl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:background="@drawable/board_clear"
             android:clickable="true"
             android:onClick="onClick"
             tools:context=".OnlineActivity"
    >

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/online_banner_ad_unit_id" />

    <!-- SIGN-IN SCREEN -->
    <LinearLayout
        android:id="@+id/screen_sign_in"
        android:layout_above="@id/ad_view"
        style="@style/LLScreen">
        <TextView style="@style/GameTitle" />
        <TextView style="@style/GameBlurb" />

        <Button android:id="@+id/button_single_player"
                style="@style/MainScreenButton"
                android:text="@string/single_player" />
        <com.google.android.gms.common.SignInButton android:id="@+id/button_sign_in"
                                                    style="@style/SignInButton" />
    </LinearLayout>

    <!-- MAIN SCREEN -->
    <LinearLayout
        android:id="@+id/screen_main"
        android:layout_above="@id/ad_view"
        style="@style/LLScreen">

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/yutImage"
            android:src="@drawable/yutonline"
            android:paddingBottom="30dp"/>
        <TextView style="@style/MainScreenButtonBlurb"
                  android:text="" />
        <Button android:id="@+id/button_quick_game"
                style="@style/MainScreenButton"
                android:text="@string/quick_game" />
        <TextView style="@style/MainScreenButtonBlurb"
                  android:text="@string/quick_game_explanation" />
        <Button android:id="@+id/backButton"
                style="@style/SignOutButton"
                android:onClick="exit"
                android:text="@string/back" />
        <TextView style="@style/MainScreenButtonBlurb"
                  android:text="@string/return_explanation" />
    </LinearLayout>

    <!-- INVITATION POPUP -->
    <LinearLayout
        android:id="@+id/invitation_popup"
        android:layout_above="@id/ad_view"
        style="@style/InvPopup">

        <TextView android:id="@+id/incoming_invitation_text" style="@style/InvPopupText" />
        <Button android:id="@+id/button_accept_popup_invitation"
                style="@style/InvPopupButton"
                android:text="@string/accept_popup_invite" />
    </LinearLayout>

    <!-- "PLEASE WAIT" SCREEN -->
    <LinearLayout
        android:id="@+id/screen_wait"
        android:layout_above="@id/ad_view"
        style="@style/LLScreen">

        <TextView style="@style/Blurb" android:text="@string/please_wait" />
    </LinearLayout>

    <!-- GAMEPLAY SCREEN -->
    <LinearLayout
        android:id="@+id/screen_game"
        android:layout_above="@id/ad_view"
        style="@style/LLScreen">

        <TextView android:id="@+id/instructions"
                  style="@style/Instructions" android:text="@string/instructions" />
        <TextView android:id="@+id/my_score" style="@style/ScoreDisplay" />
        <Button android:id="@+id/button_click_me"
                style="@style/GameButton"
                android:text="@string/click_me"
                android:layout_marginBottom="20dp" />
        <TextView android:id="@+id/countdown" style="@style/FigureLabel" />

        <LinearLayout style="@style/ScoresBox">
            <TextView android:id="@+id/score0" style="@style/ScoreText" />
            <TextView android:id="@+id/score1" style="@style/ScoreText" />
            <TextView android:id="@+id/score2" style="@style/ScoreText" />
            <TextView android:id="@+id/score3" style="@style/ScoreText" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>